poprawiony wygląd theme

--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ nav a {
     font-size: 20px;
 }
 
+.theme {
+    margin-left: 1150px;
+}
+
 .content {
     height: calc(100vh - 60px);
 }
@@ -316,8 +320,9 @@ h1 {
   content: "";
   position: absolute;
   height: 26px;
+  top: 0,1px;
   width: 26px;
-  left: 4px;
+  left: 5px;
   bottom: 5px;
   background-color: white;
   border-radius: 50%;
