--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* OGÓLNE */
 body {
   margin: 0;
-  background-color: #2c2c2c;
+  background-color: #000;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #f0f0f0;
   height: 100vh;
@@ -53,6 +53,7 @@ header {
 
 /* Oryginalny selektor nav (zachowany dla kompatybilności) */
 nav {
+  z-index: 1;
   background-color: #1a1a1a;
   display: flex;
   justify-content: space-between;
@@ -282,7 +283,7 @@ input:checked + .slider:before {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(70vh - 60px);
+  height: calc(62vh - 60px);
 }
 
 .category-container, .category-container-levels {
@@ -459,4 +460,132 @@ body.dark .modal-content {
 @keyframes scrollBackground {
   0% { background-position: 0 0; }
   100% { background-position: -2000px 0; }
+}
+
+/* tło */
+
+.neo{
+  max-width: 350px;
+  max-height: 300px;
+  margin-bottom: 200px;
+}
+
+h1 {
+	color: green;
+	font-family: 'Share Tech Mono', 'Cascadia Code', Menlo, Monaco, 'Courier New', monospace;
+	font-size: 3rem;
+	filter: drop-shadow(0px 0px 5px currentColor);
+	
+	&::after {
+		content: '';
+		display: inline-block;
+		width: .2em;
+		height: .7em;
+		background-color: currentColor;
+		margin-left: .1em;
+		animation: blink 1s linear infinite forwards;
+		vertical-align: baseline;
+	}
+}
+
+.grid-container {
+	--grid: 10rem;
+  z-index: 0;
+	width: 100%;
+	height: calc(100vh - 60px);
+	position: absolute;
+	top: 60px;
+	left: 0;
+	transform-style: preserve-3d;
+	perspective: 100rem;
+	animation: rotate 100s linear infinite forwards;
+  overflow: hidden;
+	
+	.plane {
+		--dir: 1;
+		width: 300%;
+		height: 150%;
+		min-height: 70rem;
+		position: absolute;
+		bottom: 0;
+		transform-style: preserve-3d;
+		transform-origin: bottom center;
+		transform: translateX(-50%) rotateX(85deg);
+		
+		&:last-child {
+			--dir: -1;
+			top: 0;
+			transform-origin: top center;
+			transform: translateX(-50%) rotateX(-85deg);
+			
+			& > * {
+				&::after {
+					background-image: linear-gradient(to top, rgba(0, 0, 0, 255) var(--grid), rgba(0, 0, 0, 0));
+				}
+			}
+		}
+		
+		& > * {
+			transform-style: preserve-3d;
+			height: 100%;
+			width: 100%;
+			position: absolute;
+			
+			&::before, &::after {
+				content: '';
+				display: block;
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+			}
+
+			&::before {
+				background-image: repeating-linear-gradient(to left, green, green 4px, transparent 4px, transparent var(--grid)), 
+					repeating-linear-gradient(to bottom, green, green 4px, transparent 4px, transparent var(--grid));
+				animation: move 1s linear infinite forwards;
+			}
+
+			&::after {
+				background-image: linear-gradient(to bottom, rgba(0, 0, 0, 255) var(--grid), rgba(0, 0, 0, 0));
+				z-index: 1;
+				transform: translateZ(1px);
+			}
+		}
+		
+		.glow {
+			filter: blur(1rem);
+			z-index: 1;
+			mix-blend-mode: plus-lighter;
+		}
+	}
+}
+
+@keyframes move {
+	from {
+		transform: translateY(0px);
+	}
+	
+	to {
+		transform: translateY(calc(var(--grid) * var(--dir)));
+	}
+}
+
+@keyframes blink {
+	0% {
+		visibility: visible;
+	}
+	
+	50% {
+		visibility: visible;
+	}
+	
+	51% {
+		visibility: hidden;
+	}
+	
+	100% {
+		visibility: hidden;
+	}
 }
