--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ input:checked + .slider:before {
 .arrow {
   rotate: 180deg;
   position: absolute;
-  top: -45px; 
+  top: 3px; 
   left: 50%; 
   transform: translateX(+40%);
   width: 0;
@@ -287,7 +287,7 @@ input:checked + .slider:before {
 
 .category-container, .category-container-levels {
   font-size: larger;
-  padding-top: 10vh;
+  padding-top: 5vh;
   text-align: center;
 }
 
@@ -442,6 +442,19 @@ body.dark .modal-content {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.pytania-footer {
+  position: relative;
+  margin-top: 20px;
+}
+
+.question {
+  margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #1a1a1a;
+  border:3px;
 }
 
 /* ANIMACJE */
